--- a/notebooks/03_training.ipynb
+++ b/notebooks/03_training.ipynb
@@ -48,14 +48,14 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from tqdm import tqdm\n",
     "\n",
-    "from prompt_classifier.metrics import evaluate\n",
+    "from prompt_classifier.metrics import evaluate_run\n",
     "from prompt_classifier.modeling.dspy_llm import LlmClassifier\n",
     "from prompt_classifier.modeling.fasttext import FastTextClassifier\n",
     "from prompt_classifier.modeling.nli_modernbert import ModernBERTNLI\n",
     "from prompt_classifier.util import create_domain_dataset, train_and_evaluate_model\n",
     "\n",
     "load_dotenv()\n",
-    "random.seed(1)"
+    "random.seed(22)"
    ]
   },
   {
@@ -186,7 +186,11 @@
     "    providers=[\"CUDAExecutionProvider\"],\n",
     ")\n",
     "\n",
-    "tfidf_embedding = TfidfVectorizer()"
+    "tfidf_embedding = TfidfVectorizer(\n",
+    "    max_features=20_000,\n",
+    "    stop_words=\"english\",\n",
+    "    lowercase=True,\n",
+    ")"
    ]
   },
   {
@@ -221,11 +225,9 @@
    "outputs": [],
    "source": [
     "for domain, dataset in datasets_interim.items():\n",
-    "    # Split data\n",
+    "    # GPT Classifier\n",
     "    train_data = dataset.sample(n=800)\n",
     "    test_data = dataset.drop(train_data.index).sample(n=4000)\n",
-    "\n",
-    "    # GPT Classifier\n",
     "    \"\"\"\n",
     "    llm_classifier = LlmClassifier(\n",
     "        api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
@@ -239,7 +241,7 @@
     "    llm_classifier = LlmClassifier(\n",
     "        api_key='',\n",
     "        api_base='http://localhost:11434',\n",
-    "        model_name='ollama_chat/llama3.2:3b',\n",
+    "        model_name='ollama_chat/qwen2.5:14b',\n",
     "        domain=domain,\n",
     "        train_data=train_data,\n",
     "        test_data=test_data,\n",
@@ -254,27 +256,27 @@
     "\n",
     "        test_acc = metrics.accuracy_score(test_actuals, test_predictions)\n",
     "\n",
-    "        # Evaluate and save model\n",
-    "        evaluate(\n",
+    "        # evaluate_run and save model\n",
+    "        evaluate_run(\n",
     "            predictions=test_predictions,\n",
     "            true_labels=test_actuals,\n",
     "            domain=domain,\n",
-    "            model_name=\"gpt4o-mini\",\n",
-    "            embed_model=\"ada-002\",\n",
+    "            model_name=\"qwen2.5:14b\",\n",
+    "            embed_model=\"qwen-base\",\n",
     "            cost=llm_classifier.cost,\n",
     "            latency=test_latency,\n",
     "            train_acc=test_acc\n",
     "        )\n",
     "\n",
-    "        llm_classifier.save_model(f\"models/gpt-4o-mini-{domain}.json\")\n",
+    "        llm_classifier.save_model(f\"models/qwen2.5:14b_{domain}.json\")\n",
     "\n",
     "    except Exception as e:\n",
-    "        print(f\"Error running GPT model: {e}\")\n",
+    "        print(f\"Error running LLM model: {e}\")\n",
     "\n",
-    "\n",
+    "    \n",
+    "    # ModernBERT Classifier\n",
     "    try:\n",
     "        test_data = dataset.sample(n=30_000)\n",
-    "        # ModernBERT Classifier\n",
     "        bert_classifier = ModernBERTNLI(domain=domain)\n",
     "        bert_classifier.classifier.model.to(\"cuda\")\n",
     "\n",
@@ -291,8 +293,8 @@
     "        test_acc = metrics.accuracy_score(test_data[\"label\"], test_predictions)\n",
     "        mean_prediction_time = statistics.mean(test_times)\n",
     "\n",
-    "        # Evaluate ModernBERT\n",
-    "        evaluate(\n",
+    "        # evaluate_run ModernBERT\n",
+    "        evaluate_run(\n",
     "            predictions=test_predictions,\n",
     "            true_labels=test_data[\"label\"],\n",
     "            domain=domain,\n",
@@ -357,6 +359,63 @@
     "    predictions = []\n",
     "    prediction_times = []\n",
     "\n",
+    "    for model_name, embedding_model in embedding_models.items():\n",
+    "        embed_times: float = None\n",
+    "\n",
+    "        # Add timing for embedding creation\n",
+    "        if model_name == \"tf_idf\":\n",
+    "            # Fit on training data only\n",
+    "            embedding_model.fit(train_data[\"prompt\"])\n",
+    "\n",
+    "            with open(f\"models/tfidf_{domain}.pkl\", \"wb\") as f:\n",
+    "                pickle.dump(embedding_model, f)\n",
+    "\n",
+    "            start_time = time.perf_counter_ns()\n",
+    "            train_embeds = embedding_model.transform(train_data[\"prompt\"])\n",
+    "            test_embeds = embedding_model.transform(test_data[\"prompt\"])\n",
+    "            end_time = time.perf_counter_ns()\n",
+    "            embed_times = end_time - start_time\n",
+    "        else:\n",
+    "            # Time the embedding process for training data\n",
+    "            start_time = time.perf_counter_ns()\n",
+    "            train_embeds = np.array(list(embedding_model.embed(train_data[\"prompt\"])))\n",
+    "            test_embeds = np.array(list(embedding_model.embed(test_data[\"prompt\"])))\n",
+    "            end_time = time.perf_counter_ns()\n",
+    "            embed_times = end_time - start_time\n",
+    "\n",
+    "        mean_embed_time = embed_times / len(train_data + test_data)\n",
+    "        try:\n",
+    "            # Train and evaluate SVM model\n",
+    "            train_and_evaluate_model(\n",
+    "                model_name=\"SVM\",\n",
+    "                train_embeds=train_embeds,\n",
+    "                test_embeds=test_embeds,\n",
+    "                train_labels=train_data[\"label\"],\n",
+    "                test_labels=test_data[\"label\"],\n",
+    "                domain=domain,\n",
+    "                embed_model=model_name,\n",
+    "                save_path=f\"models/SVM_{domain}_{model_name}.pkl\",\n",
+    "                embedding_time=mean_embed_time  # Pass the embedding time\n",
+    "            )\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error running SVM model: {e}\")\n",
+    "\n",
+    "        try:\n",
+    "            # Train and evaluate XGBoost model\n",
+    "            train_and_evaluate_model(\n",
+    "                model_name=\"XGBoost\",\n",
+    "                train_embeds=train_embeds,\n",
+    "                test_embeds=test_embeds,\n",
+    "                train_labels=train_data[\"label\"],\n",
+    "                test_labels=test_data[\"label\"],\n",
+    "                domain=domain,\n",
+    "                embed_model=model_name,\n",
+    "                save_path=f\"models/XGBoost_{domain}_{model_name}.json\",\n",
+    "                embedding_time=mean_embed_time  # Pass the embedding time\n",
+    "            )\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error running XGBoost model: {e}\")\n",
+    "\n",
     "    # fastText\n",
     "    try:\n",
     "        fasttext_classifier = FastTextClassifier(train_data=train_data, test_data=test_data)\n",
@@ -389,7 +448,7 @@
     "\n",
     "        mean_prediction_time = statistics.mean(prediction_times)\n",
     "\n",
-    "        evaluate(\n",
+    "        evaluate_run(\n",
     "            predictions,\n",
     "            true_labels=actuals,\n",
     "            domain=domain,\n",
@@ -401,19 +460,33 @@
     "\n",
     "        fasttext_classifier.model.save_model(f\"models/fastText_{domain}_fasttext.bin\")\n",
     "    except Exception as e:\n",
-    "        print(f\"Error running fastText model: {e}\")\n",
+    "        print(f\"Error running fastText model: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for domain, dataset in datasets.items():\n",
+    "    # Create balanced train/test splits\n",
+    "\n",
+    "    actuals = []\n",
+    "    predictions = []\n",
+    "    prediction_times = []\n",
     "\n",
     "    for model_name, embedding_model in embedding_models.items():\n",
     "        embed_times: float = None\n",
     "\n",
     "        # Add timing for embedding creation\n",
     "        if model_name == \"tf_idf\":\n",
+    "            # Fit on training data only\n",
     "            embedding_model.fit(train_data[\"prompt\"])\n",
     "\n",
     "            with open(f\"models/tfidf_{domain}.pkl\", \"wb\") as f:\n",
     "                pickle.dump(embedding_model, f)\n",
     "\n",
-    "            # Time the transform process for training data\n",
     "            start_time = time.perf_counter_ns()\n",
     "            train_embeds = embedding_model.transform(train_data[\"prompt\"])\n",
     "            test_embeds = embedding_model.transform(test_data[\"prompt\"])\n",
@@ -428,7 +501,6 @@
     "            embed_times = end_time - start_time\n",
     "\n",
     "        mean_embed_time = embed_times / len(train_data + test_data)\n",
-    "\n",
     "        try:\n",
     "            # Train and evaluate SVM model\n",
     "            train_and_evaluate_model(\n",
@@ -459,7 +531,53 @@
     "                embedding_time=mean_embed_time  # Pass the embedding time\n",
     "            )\n",
     "        except Exception as e:\n",
-    "            print(f\"Error running XGBoost model: {e}\")"
+    "            print(f\"Error running XGBoost model: {e}\")\n",
+    "\n",
+    "    # fastText\n",
+    "    try:\n",
+    "        fasttext_classifier = FastTextClassifier(train_data=train_data, test_data=test_data)\n",
+    "        fasttext_classifier.train()\n",
+    "\n",
+    "        train_predictions = []\n",
+    "        for _, row in train_data.iterrows():\n",
+    "            query = str(row[\"prompt\"]).replace(\"\\n\", \"\")\n",
+    "            prediction = fasttext_classifier.model.predict(query)\n",
+    "            train_predictions.append(1 if prediction[0][0] == \"__label__1\" else 0)\n",
+    "\n",
+    "        train_acc = metrics.accuracy_score(train_data[\"label\"], train_predictions)\n",
+    "\n",
+    "        for _, row in tqdm(test_data.iterrows(), total=len(test_data)):\n",
+    "            text = str(row[\"prompt\"])\n",
+    "            query = text.replace(\"\\n\", \"\")\n",
+    "\n",
+    "            start_time = time.perf_counter_ns()\n",
+    "            prediction = fasttext_classifier.model.predict(query)\n",
+    "            end_time = time.perf_counter_ns()\n",
+    "\n",
+    "            prediction_times.append(end_time - start_time)\n",
+    "\n",
+    "            if prediction[0][0] == \"__label__1\":\n",
+    "                predictions.append(1)\n",
+    "            else:\n",
+    "                predictions.append(0)\n",
+    "\n",
+    "            actuals.append(row[\"label\"])\n",
+    "\n",
+    "        mean_prediction_time = statistics.mean(prediction_times)\n",
+    "\n",
+    "        evaluate_run(\n",
+    "            predictions,\n",
+    "            true_labels=actuals,\n",
+    "            domain=domain,\n",
+    "            model_name=\"fastText\",\n",
+    "            embed_model=\"fastText\",\n",
+    "            latency=mean_prediction_time,\n",
+    "            train_acc=train_acc,\n",
+    "        )\n",
+    "\n",
+    "        fasttext_classifier.model.save_model(f\"models/fastText_{domain}_fasttext.bin\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error running fastText model: {e}\")"
    ]
   },
   {
