--- a/notebooks/04_results.ipynb
+++ b/notebooks/04_results.ipynb
@@ -24,8 +24,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -34,8 +32,7 @@
     "from matplotlib.patches import Patch\n",
     "from matplotlib.ticker import FuncFormatter\n",
     "\n",
-    "load_dotenv()\n",
-    "random.seed(42)"
+    "load_dotenv()"
    ]
   },
   {
@@ -82,7 +79,7 @@
     "grouped_results['log_latency'] = np.log10(grouped_results['latency'])\n",
     "\n",
     "# Save the grouped results to a CSV file\n",
-    "grouped_results.to_csv(\"../reports/grouped_metrics.csv\", index=False)"
+    "grouped_results.to_csv(\"../reports/grouped_dencun_training.csv\", index=False)"
    ]
   },
   {
