mlp, gradio changed, ruff formating

--- a/notebooks/03_training.ipynb
+++ b/notebooks/03_training.ipynb
@@ -32,7 +32,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "import gc\n",
     "import pickle\n",
     "import random\n",
@@ -78,8 +77,9 @@
     "# Memory tracking\n",
     "def print_gpu_memory():\n",
     "    if torch.cuda.is_available():\n",
-    "        print(f'GPU memory allocated: {torch.cuda.memory_allocated()/1e9:.2f} GB')\n",
-    "        print(f'GPU memory cached: {torch.cuda.memory_reserved()/1e9:.2f} GB')\n",
+    "        print(f\"GPU memory allocated: {torch.cuda.memory_allocated()/1e9:.2f} GB\")\n",
+    "        print(f\"GPU memory cached: {torch.cuda.memory_reserved()/1e9:.2f} GB\")\n",
+    "\n",
     "\n",
     "def clear_gpu_memory():\n",
     "    if torch.cuda.is_available():\n",
@@ -131,24 +131,19 @@
     "healthcare_prompts = pd.read_csv(\"data/processed/healthcare_prompts.csv\")\n",
     "finance_prompts = pd.read_csv(\"data/processed/finance_prompts.csv\")\n",
     "\n",
-    "law_dataset = create_domain_dataset(\n",
-    "    law_prompts,\n",
-    "    [healthcare_prompts, finance_prompts]\n",
-    ")\n",
+    "law_dataset = create_domain_dataset(law_prompts, [healthcare_prompts, finance_prompts])\n",
     "\n",
     "healthcare_dataset = create_domain_dataset(\n",
-    "    healthcare_prompts,\n",
-    "    [law_prompts, finance_prompts]\n",
+    "    healthcare_prompts, [law_prompts, finance_prompts]\n",
     ")\n",
     "\n",
     "finance_dataset = create_domain_dataset(\n",
-    "    finance_prompts,\n",
-    "    [law_prompts, healthcare_prompts]\n",
+    "    finance_prompts, [law_prompts, healthcare_prompts]\n",
     ")\n",
     "\n",
     "datasets = {\n",
-    "   # \"law\": law_dataset,\n",
-    "   # \"healthcare\": healthcare_dataset,\n",
+    "    # \"law\": law_dataset,\n",
+    "    # \"healthcare\": healthcare_dataset,\n",
     "    \"finance\": finance_dataset,\n",
     "}"
    ]
@@ -165,18 +160,15 @@
     "finance_prompts_interim = pd.read_csv(\"data/interim/finance_prompts.csv\")\n",
     "\n",
     "law_dataset_interim = create_domain_dataset(\n",
-    "    law_prompts_interim,\n",
-    "    [healthcare_prompts_interim, finance_prompts_interim]\n",
+    "    law_prompts_interim, [healthcare_prompts_interim, finance_prompts_interim]\n",
     ")\n",
     "\n",
     "healthcare_dataset_interim = create_domain_dataset(\n",
-    "    healthcare_prompts_interim,\n",
-    "    [law_prompts_interim, finance_prompts_interim]\n",
+    "    healthcare_prompts_interim, [law_prompts_interim, finance_prompts_interim]\n",
     ")\n",
     "\n",
     "finance_dataset_interim = create_domain_dataset(\n",
-    "    finance_prompts_interim,\n",
-    "    [law_prompts_interim, healthcare_prompts_interim]\n",
+    "    finance_prompts_interim, [law_prompts_interim, healthcare_prompts_interim]\n",
     ")\n",
     "\n",
     "datasets_interim = {\n",
@@ -216,8 +208,7 @@
    ],
    "source": [
     "baai_embedding = TextEmbedding(\n",
-    "    model_name=\"BAAI/bge-small-en-v1.5\",\n",
-    "    providers=[\"CUDAExecutionProvider\"]\n",
+    "    model_name=\"BAAI/bge-small-en-v1.5\", providers=[\"CUDAExecutionProvider\"]\n",
     ")\n",
     "mini_embedding = TextEmbedding(\n",
     "    model_name=\"sentence-transformers/all-MiniLM-L6-v2\",\n",
@@ -251,7 +242,7 @@
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device: {device}\")\n",
     "\n",
-    "torch._dynamo.config.suppress_errors = True # Suppresses warnings in ModernBERT"
+    "torch._dynamo.config.suppress_errors = True  # Suppresses warnings in ModernBERT"
    ]
   },
   {
@@ -285,9 +276,9 @@
     "    )\n",
     "    \"\"\"\n",
     "    llm_classifier = LlmClassifier(\n",
-    "        api_key='',\n",
-    "        api_base='http://localhost:11434',\n",
-    "        model_name='ollama_chat/qwen2.5:14b',\n",
+    "        api_key=\"\",\n",
+    "        api_base=\"http://localhost:11434\",\n",
+    "        model_name=\"ollama_chat/qwen2.5:14b\",\n",
     "        domain=domain,\n",
     "        train_data=train_data,\n",
     "        test_data=test_data,\n",
@@ -320,7 +311,6 @@
     "    except Exception as e:\n",
     "        print(f\"Error running LLM model: {e}\")\n",
     "\n",
-    "    \n",
     "    # ModernBERT Classifier\n",
     "    try:\n",
     "        test_data = dataset.sample(n=30_000)\n",
@@ -509,7 +499,9 @@
     "\n",
     "    # fastText\n",
     "    try:\n",
-    "        fasttext_classifier = FastTextClassifier(train_data=train_data, test_data=test_data)\n",
+    "        fasttext_classifier = FastTextClassifier(\n",
+    "            train_data=train_data, test_data=test_data\n",
+    "        )\n",
     "        fasttext_classifier.train()\n",
     "\n",
     "        train_predictions = []\n",
