--- a/notebooks/02_processing.ipynb
+++ b/notebooks/02_processing.ipynb
@@ -147,9 +147,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "prompt-validation",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
