--- a/notebooks/04_results.ipynb
+++ b/notebooks/04_results.ipynb
@@ -561,7 +561,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "prompt-validation",
    "language": "python",
    "name": "python3"
   },
