--- a/notebooks/03_training.ipynb
+++ b/notebooks/03_training.ipynb
@@ -142,8 +142,8 @@
     ")\n",
     "\n",
     "datasets = {\n",
-    "    # \"law\": law_dataset,\n",
-    "    # \"healthcare\": healthcare_dataset,\n",
+    "    \"law\": law_dataset,\n",
+    "    \"healthcare\": healthcare_dataset,\n",
     "    \"finance\": finance_dataset,\n",
     "}"
    ]
