--- a/notebooks/05_inference.ipynb
+++ b/notebooks/05_inference.ipynb
@@ -50,7 +50,7 @@
     "import statistics\n",
     "import time\n",
     "from functools import partial\n",
-    "\n",
+    "import torch\n",
     "import fasttext\n",
     "import numpy as np\n",
     "import onnxruntime as ort\n",
@@ -65,6 +65,7 @@
     "from prompt_classifier.modeling.dspy_llm import LlmClassifier\n",
     "from prompt_classifier.modeling.fasttext import FastTextClassifier\n",
     "from prompt_classifier.modeling.nli_modernbert import ModernBERTNLI\n",
+    "from prompt_classifier.modeling.widemlp import MLP, prepare_inputs\n",
     "\n",
     "load_dotenv()\n",
     "random.seed(22)\n",
@@ -1306,6 +1307,104 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# WideMLP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab_size = 30522  # BERT vocab size\n",
+    "num_classes = 3     # finance, healthcare, law\n",
+    "batch_size = 32\n",
+    "\n",
+    "# Load models\n",
+    "try:\n",
+    "    model_finance = MLP(vocab_size=vocab_size, num_classes=2)\n",
+    "    model_healthcare = MLP(vocab_size=vocab_size, num_classes=2)\n",
+    "    model_law = MLP(vocab_size=vocab_size, num_classes=2)\n",
+    "\n",
+    "    model_finance.load_state_dict(torch.load('models/wide_finance.pt'))\n",
+    "    model_healthcare.load_state_dict(torch.load('models/wide_healthcare.pt'))\n",
+    "    model_law.load_state_dict(torch.load('models/wide_law.pt'))\n",
+    "\n",
+    "    # Move models to GPU if available\n",
+    "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "    model_finance.to(device)\n",
+    "    model_healthcare.to(device)\n",
+    "    model_law.to(device)\n",
+    "    \n",
+    "    model_finance.eval()\n",
+    "    model_healthcare.eval()\n",
+    "    model_law.eval()\n",
+    "\n",
+    "    print(\"Successfully loaded all MLP models\")\n",
+    "\n",
+    "    # Run inference on all datasets\n",
+    "    for domain, inference_df in datasets.items():\n",
+    "        print(f\"\\nProcessing {domain} dataset...\")\n",
+    "        predictions_widemlp = []\n",
+    "        prediction_times_widemlp = []\n",
+    "        actuals_widemlp = []\n",
+    "\n",
+    "        for i in tqdm(range(0, len(inference_df), batch_size)):\n",
+    "            batch = inference_df.iloc[i:i+batch_size]\n",
+    "            texts = batch['prompt'].tolist()\n",
+    "            \n",
+    "            # Tokenize\n",
+    "            encoded = tokenizer(texts, padding=True, truncation=True)\n",
+    "            input_ids = encoded['input_ids']\n",
+    "            \n",
+    "            start_time = time.perf_counter_ns()\n",
+    "            \n",
+    "            # Prepare inputs\n",
+    "            flat_inputs, offsets = prepare_inputs(input_ids, device)\n",
+    "            \n",
+    "            # Run inference\n",
+    "            with torch.no_grad():\n",
+    "                pred_finance = model_finance(flat_inputs, offsets)\n",
+    "                pred_healthcare = model_healthcare(flat_inputs, offsets)\n",
+    "                pred_law = model_law(flat_inputs, offsets)\n",
+    "                \n",
+    "                # Get predictions\n",
+    "                pred_finance = torch.argmax(pred_finance, dim=1)\n",
+    "                pred_healthcare = torch.argmax(pred_healthcare, dim=1)\n",
+    "                pred_law = torch.argmax(pred_law, dim=1)\n",
+    "\n",
+    "            end_time = time.perf_counter_ns()\n",
+    "            \n",
+    "            for f, h, l in zip(pred_finance, pred_healthcare, pred_law):\n",
+    "                prediction_times_widemlp.append(end_time - start_time)\n",
+    "                # If any model predicts 1, final prediction is 0\n",
+    "                predictions_widemlp.append(\n",
+    "                    0 if (f.item() == 1 or h.item() == 1 or l.item() == 1) else 1\n",
+    "                )\n",
+    "            \n",
+    "            actuals_widemlp.extend(batch['label'].tolist())\n",
+    "\n",
+    "        # Evaluate results\n",
+    "        evaluate_run(\n",
+    "            predictions=predictions_widemlp,\n",
+    "            true_labels=actuals_widemlp,\n",
+    "            latency=statistics.mean(prediction_times_widemlp),\n",
+    "            domain=domain,\n",
+    "            embed_model=\"BERT\",\n",
+    "            model_name=\"WideMLP\",\n",
+    "            train_acc=0.0,\n",
+    "            cost=0.0,\n",
+    "            training=False\n",
+    "        )\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"Error running WideMLP models: {e}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1318,18 +1417,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.11"
   }
  },
  "nbformat": 4,
