--- a/notebooks/03_training.ipynb
+++ b/notebooks/03_training.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,26 +508,21 @@
    "source": [
     "# Initialize tokenizer and models dictionary\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"sentence-transformers/all-MiniLM-L12-v2\")\n",
-    "tokenizer_func = partial(tokenizer, padding=True, truncation=True, return_tensors=\"pt\", max_length=512)\n",
-    "\n",
-    "# Dictionary to store trained models for each domain\n",
-    "models = {}"
+    "tokenizer_func = partial(tokenizer, padding=True, truncation=True, return_tensors=\"pt\", max_length=512)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Training settings\n",
-    "vocab_size = 30522  # BERT vocab size from tokenizer.vocab_size\n",
+    "vocab_size = 20_000 \n",
     "num_epochs = 10\n",
     "batch_size = 32\n",
     "learning_rate = 1e-3\n",
     "\n",
-    "# Initialize optimizer and scheduler components\n",
-    "learning_rate = 1e-3\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "\n",
     "def evaluate_epoch(model, data_loader, device):\n",
@@ -620,33 +615,6 @@
     "            current_lr = optimizer.param_groups[0]['lr']\n",
     "            print(f\"Learning rate: {current_lr:.2e}\\n\")\n",
     "\n",
-    "        # Evaluation\n",
-    "        model.eval()\n",
-    "        predictions = []\n",
-    "        actuals = []\n",
-    "        prediction_times = []\n",
-    "        \n",
-    "        with torch.no_grad():\n",
-    "            for i in tqdm(range(0, len(test_data), batch_size), desc=\"Evaluating\"):\n",
-    "                batch = test_data.iloc[i:i+batch_size]\n",
-    "                texts = batch['prompt'].tolist()\n",
-    "                \n",
-    "                # Time the prediction\n",
-    "                start_time = time.perf_counter_ns()\n",
-    "                \n",
-    "                encoded = tokenizer(texts, padding=True, truncation=True)\n",
-    "                input_ids = encoded['input_ids']\n",
-    "                flat_inputs, offsets = prepare_inputs(input_ids, device)\n",
-    "                \n",
-    "                outputs = model(flat_inputs, offsets)\n",
-    "                preds = torch.argmax(outputs, dim=1)\n",
-    "                \n",
-    "                end_time = time.perf_counter_ns()\n",
-    "                prediction_times.append(end_time - start_time)\n",
-    "                \n",
-    "                predictions.extend(preds.cpu().tolist())\n",
-    "                actuals.extend(batch['label'].tolist())\n",
-    "        \n",
     "        # Calculate metrics\n",
     "        test_acc = metrics.accuracy_score(actuals, predictions)\n",
     "        mean_prediction_time = statistics.mean(prediction_times)\n",
@@ -663,9 +631,6 @@
     "            training=True\n",
     "        )\n",
     "        \n",
-    "        # Store trained model in dictionary\n",
-    "        models[domain] = model\n",
-    "\n",
     "        # Save the model\n",
     "        torch.save(model.state_dict(), f\"models/wide_{domain}.pt\")\n",
     "    \n",
@@ -703,18 +668,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.11"
   }
  },
  "nbformat": 4,
