--- a/notebooks/03_training.ipynb
+++ b/notebooks/03_training.ipynb
@@ -28,11 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import gc\n",
+    "import os\n",
     "import pickle\n",
     "import random\n",
     "import statistics\n",
@@ -43,23 +44,35 @@
     "import onnxruntime as ort\n",
     "import pandas as pd\n",
     "import torch\n",
+    "from accelerate.data_loader import DataLoader\n",
+    "from datasets import ClassLabel, Dataset\n",
     "from dotenv import load_dotenv\n",
     "from fastembed import TextEmbedding\n",
     "from sklearn import metrics\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from transformers import AutoTokenizer\n",
-    "from tqdm import tqdm\n",
     "from torch.optim.lr_scheduler import ReduceLROnPlateau\n",
+    "from tqdm import tqdm\n",
+    "from transformers import AutoTokenizer\n",
     "\n",
+    "os.chdir('..')\n",
     "from prompt_classifier.metrics import evaluate_run\n",
     "from prompt_classifier.modeling.dspy_llm import LlmClassifier\n",
     "from prompt_classifier.modeling.fasttext import FastTextClassifier\n",
     "from prompt_classifier.modeling.nli_modernbert import ModernBERTNLI\n",
-    "from prompt_classifier.util import create_domain_dataset, train_and_evaluate_model\n",
     "from prompt_classifier.modeling.widemlp import MLP, prepare_inputs\n",
+    "from prompt_classifier.util import create_domain_dataset, train_and_evaluate_model\n",
     "\n",
     "load_dotenv()\n",
     "random.seed(22)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BATCH_SIZE = 32"
    ]
   },
   {
@@ -74,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,8 +158,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "0(Finance) 1(Law) 2(Health) 3(Uncertain)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "finance_prompts[\"label\"] = 0\n",
+    "law_prompts[\"label\"] = 1\n",
+    "healthcare_prompts[\"label\"] = 2\n",
+    "\n",
+    "combined_df = pd.concat([finance_prompts, healthcare_prompts, law_prompts], ignore_index=True)\n",
+    "combined_dataset = Dataset.from_pandas(combined_df)\n",
+    "combined_dataset = combined_dataset.cast_column(\n",
+    "    \"label\", ClassLabel(num_classes=3, names=[\"finance\", \"health\", \"law\"])\n",
+    ")\n",
+    "combined_dataset = combined_dataset.train_test_split(\n",
+    "    test_size=0.15, stratify_by_column=\"label\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataset = combined_dataset[\"train\"]\n",
+    "test_dataset = combined_dataset[\"test\"]\n",
+    "train_dataloader = DataLoader(\n",
+    "    train_dataset, batch_size=BATCH_SIZE, shuffle=True, num_workers=1, pin_memory=True\n",
+    ")\n",
+    "test_dataloader = DataLoader(test_dataset, batch_size=BATCH_SIZE, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate class weights to handle class imbalance\n",
+    "labels = combined_dataset[\"train\"][\"label\"]\n",
+    "unique, counts = np.unique(labels, return_counts=True)\n",
+    "total_samples = len(labels)\n",
+    "\n",
+    "# Compute weights inversely proportional to class frequencies\n",
+    "class_weights = total_samples / (len(unique) * counts)\n",
+    "class_weights = torch.tensor(class_weights, dtype=torch.float)\n",
+    "\n",
+    "print(\"Class weights:\")\n",
+    "print(f\"Class 0 (finance): {class_weights[0]:.4f}\")\n",
+    "print(f\"Class 1 (health): {class_weights[1]:.4f}\")\n",
+    "print(f\"Class 2 (law): {class_weights[2]:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,12 +567,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Wide MLP Model\n",
-    "\n",
-    "Train the Wide MLP model using BERT tokenization and custom embedding layer:\n",
-    "- Efficient batch processing\n",
-    "- Multi-layer architecture\n",
-    "- Domain-specific classification heads"
+    "### Wide MLP Model"
    ]
   },
   {
@@ -506,19 +576,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize tokenizer and models dictionary\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"sentence-transformers/all-MiniLM-L12-v2\")\n",
-    "tokenizer_func = partial(tokenizer, padding=True, truncation=True, return_tensors=\"pt\", max_length=512)"
+    "tokenizer = AutoTokenizer.from_pretrained(\"sentence-transformers/all-MiniLM-L6-v2\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Training settings\n",
-    "vocab_size = 20_000 \n",
+    "vocab_size = 20_000\n",
     "num_epochs = 10\n",
     "batch_size = 32\n",
     "learning_rate = 1e-3\n",
@@ -530,122 +598,32 @@
     "    predictions = []\n",
     "    actuals = []\n",
     "    running_loss = 0.0\n",
-    "    \n",
+    "\n",
     "    with torch.no_grad():\n",
-    "        for i in range(0, len(data_loader), batch_size):\n",
-    "            batch = data_loader.iloc[i:i+batch_size]\n",
-    "            texts = batch['prompt'].tolist()\n",
-    "            labels = torch.tensor(batch['label'].tolist(), device=device)\n",
-    "            \n",
+    "        for batch in data_loader:\n",
+    "            texts = batch['prompt']\n",
+    "            labels = torch.tensor(batch['label'], device=device)\n",
+    "\n",
+    "            # Tokenize and prepare inputs\n",
     "            encoded = tokenizer(texts, padding=True, truncation=True)\n",
-    "            input_ids = encoded['input_ids']\n",
+    "            input_ids = torch.tensor(encoded['input_ids'], device=device)\n",
     "            flat_inputs, offsets = prepare_inputs(input_ids, device)\n",
-    "            \n",
+    "\n",
     "            loss, outputs = model(flat_inputs, offsets, labels)\n",
     "            preds = torch.argmax(outputs, dim=1)\n",
-    "            \n",
+    "\n",
     "            running_loss += loss.item()\n",
     "            predictions.extend(preds.cpu().tolist())\n",
     "            actuals.extend(labels.cpu().tolist())\n",
-    "    \n",
+    "\n",
     "    metrics_dict = {\n",
     "        'loss': running_loss / len(data_loader),\n",
     "        'accuracy': metrics.accuracy_score(actuals, predictions),\n",
-    "        'precision': metrics.precision_score(actuals, predictions),\n",
-    "        'recall': metrics.recall_score(actuals, predictions),\n",
-    "        'f1': metrics.f1_score(actuals, predictions)\n",
+    "        'macro_f1': metrics.f1_score(actuals, predictions, average='macro'),\n",
+    "        'weighted_f1': metrics.f1_score(actuals, predictions, average='weighted')\n",
     "    }\n",
-    "    \n",
-    "    return metrics_dict\n",
     "\n",
-    "def format_metrics(metrics_dict):\n",
-    "    return ' | '.join([f\"{k}: {v:.4f}\" for k,v in metrics_dict.items()])\n",
-    "\n",
-    "# Training loop\n",
-    "for domain, dataset in datasets.items():\n",
-    "    print(f\"\\n{'='*80}\")\n",
-    "    print(f\"Training WideMLP for {domain.upper()} domain\")\n",
-    "    print(f\"{'='*80}\\n\")\n",
-    "    \n",
-    "    # Split data\n",
-    "    train_data = dataset.sample(frac=0.7).reset_index(drop=True)\n",
-    "    test_data = dataset.drop(train_data.index).reset_index(drop=True)\n",
-    "    \n",
-    "    # Initialize model\n",
-    "    model = MLP(vocab_size=vocab_size, num_classes=2)\n",
-    "    model.to(device)\n",
-    "    optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
-    "    scheduler = ReduceLROnPlateau(optimizer, mode='min', factor=0.5, patience=2, verbose=True)\n",
-    "    \n",
-    "    # Training loop\n",
-    "    model.train()\n",
-    "    train_losses = []\n",
-    "    \n",
-    "    try:\n",
-    "        for epoch in range(num_epochs):\n",
-    "            model.train()\n",
-    "            epoch_losses = []\n",
-    "            \n",
-    "            # Training phase\n",
-    "            with tqdm(range(0, len(train_data), batch_size), desc=f\"Epoch {epoch+1}/{num_epochs}\") as pbar:\n",
-    "                for i in pbar:\n",
-    "                    batch = train_data.iloc[i:i+batch_size]\n",
-    "                    texts = batch['prompt'].tolist()\n",
-    "                    labels = torch.tensor(batch['label'].tolist(), device=device)\n",
-    "                    \n",
-    "                    encoded = tokenizer(texts, padding=True, truncation=True)\n",
-    "                    input_ids = encoded['input_ids']\n",
-    "                    flat_inputs, offsets = prepare_inputs(input_ids, device)\n",
-    "                    \n",
-    "                    optimizer.zero_grad()\n",
-    "                    loss, _ = model(flat_inputs, offsets, labels)\n",
-    "                    loss.backward()\n",
-    "                    optimizer.step()\n",
-    "                    epoch_losses.append(loss.item())\n",
-    "            \n",
-    "            # Evaluation phase\n",
-    "            print(f\"\\nEpoch {epoch+1} Results:\")\n",
-    "            print(\"-\" * 40)\n",
-    "            train_metrics = evaluate_epoch(model, train_data, device)\n",
-    "            print(f\"Train    | {format_metrics(train_metrics)}\")\n",
-    "            val_metrics = evaluate_epoch(model, test_data, device)\n",
-    "            print(f\"Val | {format_metrics(val_metrics)}\\n\")\n",
-    "                        \n",
-    "            scheduler.step(val_metrics['loss'])\n",
-    "            current_lr = optimizer.param_groups[0]['lr']\n",
-    "            print(f\"Learning rate: {current_lr:.2e}\\n\")\n",
-    "\n",
-    "        # Calculate metrics\n",
-    "        test_acc = metrics.accuracy_score(actuals, predictions)\n",
-    "        mean_prediction_time = statistics.mean(prediction_times)\n",
-    "        \n",
-    "        evaluate_run(\n",
-    "            predictions=predictions,\n",
-    "            true_labels=actuals,\n",
-    "            latency=mean_prediction_time,\n",
-    "            domain=domain,\n",
-    "            embed_model=\"BERT\",\n",
-    "            model_name=\"WideMLP\",\n",
-    "            train_acc=test_acc,\n",
-    "            cost=0.0,\n",
-    "            training=True\n",
-    "        )\n",
-    "        \n",
-    "        # Save the model\n",
-    "        torch.save(model.state_dict(), f\"models/wide_{domain}.pt\")\n",
-    "    \n",
-    "    except Exception as e:\n",
-    "        print(f\"Error training WideMLP for {domain}: {e}\")\n",
-    "        continue"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## ONNX Model Export\n",
-    "\n",
-    "Export trained MLP models to ONNX format for deployment."
+    "    return metrics_dict"
    ]
   },
   {
@@ -653,7 +631,69 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def format_metrics(metrics_dict):\n",
+    "    return ' | '.join([f\"{k}: {v:.4f}\" for k,v in metrics_dict.items()])\n",
+    "\n",
+    "# Initialize model with 3 classes\n",
+    "model = MLP(vocab_size=tokenizer.vocab_size, num_classes=3, problem_type=\"multi_label_classification\")\n",
+    "model.to(device)\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
+    "scheduler = ReduceLROnPlateau(optimizer, mode='min', factor=0.5, patience=2, verbose=True)\n",
+    "\n",
+    "print(f\"Training on device: {device}\")\n",
+    "print(f\"Training samples: {len(train_dataset)}\")\n",
+    "print(f\"Test samples: {len(test_dataset)}\")\n",
+    "\n",
+    "for epoch in range(num_epochs):\n",
+    "    model.train()\n",
+    "    epoch_losses = []\n",
+    "\n",
+    "    # Training phase\n",
+    "    with tqdm(enumerate(train_dataloader), total=len(train_dataloader), desc=f\"Epoch {epoch+1}/{num_epochs}\") as pbar:\n",
+    "        for i, batch in pbar:\n",
+    "            texts = batch['prompt']\n",
+    "            labels = torch.tensor(batch['label'], device=device)\n",
+    "\n",
+    "            # Tokenize and prepare inputs\n",
+    "            encoded = tokenizer(texts, padding=True, truncation=True)\n",
+    "            input_ids = torch.tensor(encoded['input_ids'], device=device)\n",
+    "            flat_inputs, offsets = prepare_inputs(input_ids, device)\n",
+    "\n",
+    "            optimizer.zero_grad()\n",
+    "            loss, _ = model(flat_inputs, offsets, labels)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            epoch_losses.append(loss.item())\n",
+    "\n",
+    "            if i % 50 == 0:\n",
+    "                pbar.set_postfix({'loss': f\"{loss.item():.4f}\"})\n",
+    "\n",
+    "    # Evaluation phase\n",
+    "    print(f\"\\nEpoch {epoch+1} Results:\")\n",
+    "    print(\"-\" * 40)\n",
+    "    train_metrics = evaluate_epoch(model, train_dataloader, device)\n",
+    "    print(f\"Train | {format_metrics(train_metrics)}\")\n",
+    "    val_metrics = evaluate_epoch(model, test_dataloader, device)\n",
+    "    print(f\"Test  | {format_metrics(val_metrics)}\\n\")\n",
+    "\n",
+    "    scheduler.step(val_metrics['loss'])\n",
+    "    current_lr = optimizer.param_groups[0]['lr']\n",
+    "    print(f\"Learning rate: {current_lr:.2e}\\n\")\n",
+    "\n",
+    "    # Save model if it's the best so far based on validation loss\n",
+    "    if not hasattr(model, 'best_val_loss') or val_metrics['loss'] < model.best_val_loss:\n",
+    "        model.best_val_loss = val_metrics['loss']\n",
+    "        torch.save({\n",
+    "            'epoch': epoch,\n",
+    "            'model_state_dict': model.state_dict(),\n",
+    "            'optimizer_state_dict': optimizer.state_dict(),\n",
+    "            'val_metrics': val_metrics,\n",
+    "        }, 'models_5/mlp_best_model.pt')\n",
+    "\n",
+    "print(\"Training completed!\")\n",
+    "print(\"Best model saved to: models/mlp_best_model.pt\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -665,9 +705,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "prompt-validation",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
