--- a/notebooks/04_results.ipynb
+++ b/notebooks/04_results.ipynb
@@ -561,9 +561,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "prompt-validation",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
